added resume link

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <p>PHONE : +91 9766418525</p>
                     <p>MAIL : tejasparamsagar21@gmail.com</p>
                     <p>Location : Pune, India</p>
-                    <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
-                        class="btn-img">DOWNLOAD CV </button>
+                    <a href="https://drive.google.com/file/d/1V5kNWp37Sp2oZDsWUQ2zYlTCQYePTRzM/view?usp=sharing"><button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
+                        class="btn-img">DOWNLOAD CV </button></a>
                 </div>
             </div>
             <div class="widget card">
